--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ h1,h2,h3,h4,h5,h6 { margin: 0; }
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(-45deg, #003296, #001f75, #0024c4, #0050f0);
+  background: linear-gradient(-45deg, #003296, #001f75, #0024c4, #0055ff);
   background-size: 400% 400%;
   animation: gradientBG 15s ease infinite;
 
